[package]
name = "simple-token"
version = "0.1.0"
authors = ["Bryan <psy2848048@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
doctest = false
test = false

[dependencies]
contract = { path = "../../../contract", package = "casperlabs-contract" }
erc20_logic  = { path = "../erc20-logic", package = "erc20-logic", default-features = false }
types = { path = "../../../types", package = "casperlabs-types" }
